// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@podo/web > renders button slots, states, and activation event 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  background: var(--podo-button-root-background, var(--podo-component-button-background, #5B5BD6));
  border: 1px solid transparent;
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-button-label-color, var(--podo-component-button-text, #FFFFFF));
  cursor: pointer;
  display: inline-flex;
  gap: var(--podo-spacing-scale-1, 4px);
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

.podo-button[disabled] {
  cursor: not-allowed;
  opacity: 0.56;
}

.podo-input {
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #14151A));
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #14151A));
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-input[aria-invalid="true"] {
  border-color: var(--podo-semantic-color-text-danger, #D92D20);
}

.podo-field {
  display: grid;
  gap: var(--podo-spacing-component-field-gap, 8px);
}

.podo-field__label {
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-default, #14151A));
  font-weight: 600;
}

.podo-field__description,
.podo-field__error {
  color: var(--podo-semantic-color-text-default, #14151A);
  font-size: 0.875em;
}

.podo-field__description {
  color: var(--podo-field-description-color, var(--podo-semantic-color-text-default, #14151A));
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #D92D20));
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style>
<button class="podo-button" part="root" data-variant="solid" data-size="md">
  <span class="podo-button__icon" part="leftIcon"><slot name="leftIcon"></slot></span>
  <span part="label"><slot></slot></span>
  <span class="podo-button__icon" part="rightIcon"><slot name="rightIcon"></slot></span>
</button>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > field 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  background: var(--podo-button-root-background, var(--podo-component-button-background, #5B5BD6));
  border: 1px solid transparent;
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-button-label-color, var(--podo-component-button-text, #FFFFFF));
  cursor: pointer;
  display: inline-flex;
  gap: var(--podo-spacing-scale-1, 4px);
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

.podo-button[disabled] {
  cursor: not-allowed;
  opacity: 0.56;
}

.podo-input {
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #14151A));
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #14151A));
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-input[aria-invalid="true"] {
  border-color: var(--podo-semantic-color-text-danger, #D92D20);
}

.podo-field {
  display: grid;
  gap: var(--podo-spacing-component-field-gap, 8px);
}

.podo-field__label {
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-default, #14151A));
  font-weight: 600;
}

.podo-field__description,
.podo-field__error {
  color: var(--podo-semantic-color-text-default, #14151A);
  font-size: 0.875em;
}

.podo-field__description {
  color: var(--podo-field-description-color, var(--podo-semantic-color-text-default, #14151A));
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #D92D20));
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style>
<div class="podo-field" part="root" id="email" data-state="invalid">
  <label class="podo-field__label" part="label" id="email-label" for="email-control">
    <slot name="label">Label</slot>
  </label>
  <div part="control"><slot></slot></div>
  <div class="podo-field__description" part="description" id="email-description">
    <slot name="description"></slot>
  </div>
  <div class="podo-field__error" part="error" id="email-error">
    <slot name="error"></slot>
  </div>
</div>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > icon 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  background: var(--podo-button-root-background, var(--podo-component-button-background, #5B5BD6));
  border: 1px solid transparent;
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-button-label-color, var(--podo-component-button-text, #FFFFFF));
  cursor: pointer;
  display: inline-flex;
  gap: var(--podo-spacing-scale-1, 4px);
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

.podo-button[disabled] {
  cursor: not-allowed;
  opacity: 0.56;
}

.podo-input {
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #14151A));
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #14151A));
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-input[aria-invalid="true"] {
  border-color: var(--podo-semantic-color-text-danger, #D92D20);
}

.podo-field {
  display: grid;
  gap: var(--podo-spacing-component-field-gap, 8px);
}

.podo-field__label {
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-default, #14151A));
  font-weight: 600;
}

.podo-field__description,
.podo-field__error {
  color: var(--podo-semantic-color-text-default, #14151A);
  font-size: 0.875em;
}

.podo-field__description {
  color: var(--podo-field-description-color, var(--podo-semantic-color-text-default, #14151A));
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #D92D20));
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style><span class="podo-icon podo-icon-menu" part="icon" aria-hidden="true"></span>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > input 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  background: var(--podo-button-root-background, var(--podo-component-button-background, #5B5BD6));
  border: 1px solid transparent;
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-button-label-color, var(--podo-component-button-text, #FFFFFF));
  cursor: pointer;
  display: inline-flex;
  gap: var(--podo-spacing-scale-1, 4px);
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

.podo-button[disabled] {
  cursor: not-allowed;
  opacity: 0.56;
}

.podo-input {
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #14151A));
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #14151A));
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-input[aria-invalid="true"] {
  border-color: var(--podo-semantic-color-text-danger, #D92D20);
}

.podo-field {
  display: grid;
  gap: var(--podo-spacing-component-field-gap, 8px);
}

.podo-field__label {
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-default, #14151A));
  font-weight: 600;
}

.podo-field__description,
.podo-field__error {
  color: var(--podo-semantic-color-text-default, #14151A);
  font-size: 0.875em;
}

.podo-field__description {
  color: var(--podo-field-description-color, var(--podo-semantic-color-text-default, #14151A));
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #D92D20));
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style>
<input class="podo-input" part="control" data-state="invalid" value="hello" placeholder="" aria-invalid="true">"
`;

exports[`@podo/web > renders input, field, icon, and typography components > text 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  background: var(--podo-button-root-background, var(--podo-component-button-background, #5B5BD6));
  border: 1px solid transparent;
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-button-label-color, var(--podo-component-button-text, #FFFFFF));
  cursor: pointer;
  display: inline-flex;
  gap: var(--podo-spacing-scale-1, 4px);
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

.podo-button[disabled] {
  cursor: not-allowed;
  opacity: 0.56;
}

.podo-input {
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #14151A));
  border-radius: var(--podo-radius-control-md, 8px);
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #14151A));
  min-height: 40px;
  padding: 0 var(--podo-spacing-scale-2, 8px);
}

.podo-input[aria-invalid="true"] {
  border-color: var(--podo-semantic-color-text-danger, #D92D20);
}

.podo-field {
  display: grid;
  gap: var(--podo-spacing-component-field-gap, 8px);
}

.podo-field__label {
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-default, #14151A));
  font-weight: 600;
}

.podo-field__description,
.podo-field__error {
  color: var(--podo-semantic-color-text-default, #14151A);
  font-size: 0.875em;
}

.podo-field__description {
  color: var(--podo-field-description-color, var(--podo-semantic-color-text-default, #14151A));
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #D92D20));
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style><span class="podo-text podo-typography" data-as="h1" part="text"><slot></slot></span>"
`;
